<resources>
    <string name="app_name">MDDAssignment1</string>
    <string name="a_page">Aa</string>
    <string name="b_page">Bb</string>
    <string name="c_page">Cc</string>
    <string name="d_page">Dd</string>
    <string name="e_page">Ee</string>
    <string name="f_page">Ff</string>
    <string name="g_page">Gg</string>
    <string name="h_page">Hh</string>
    <string name="i_page">Ii</string>
    <string name="j_page">Jj</string>
    <string name="k_page">Kk</string>
    <string name="l_page">Ll</string>
    <string name="m_page">Mm</string>
    <string name="n_page">Nn</string>
    <string name="o_page">Oo</string>
    <string name="p_page">Pp</string>
    <string name="q_page">Qq</string>
    <string name="r_page">Rr</string>
    <string name="s_page">Ss</string>
    <string name="t_page">Tt</string>
    <string name="u_page">Uu</string>
    <string name="v_page">Vv</string>
    <string name="w_page">Ww</string>
    <string name="x_page">Xx</string>
    <string name="y_page">Yy</string>
    <string name="z_page">Zz</string>
    <string name="learning_a_letter">Learning a Letter</string>
    <string name="letter_description">The letter \"A\" is letter 1 of 26 in the alphabet</string>
    <string name="previous_page">Previous page</string>
    <string name="last_page_z">Last page (‘Z’)</string>
    <string name="overview">Overview</string>
    <string name="first_page_a">First page (‘A’)</string>
    <string name="next_page">Next page</string>
    <string name="the_alphabet_book_title">The Alphabet Book</string>
    <string name="overview_description">Let\'s learn the alphabet together, letter by letter!</string>
    <string name="pick_a_letter_overview">Pick any letter to learn</string>
</resources>