<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/funWhite"
    tools:context=".LetterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conLayoutNavButtons"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/funOrange"
            android:drawableLeft="@drawable/previousarrowsmall"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="previousLetter"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="2dp"
            android:paddingBottom="0dp"
            android:text="@string/previous_page"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="visible"
            app:iconPadding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLastPage"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/funGreen"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToLastLetterPage"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp"
            android:text="@string/last_page_z"
            android:textAllCaps="false"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnFirstPage"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/funRed"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToFirstLetterPage"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp"
            android:text="@string/first_page_a"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnOverview"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/funBlue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToOverviewPage"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp"
            android:text="@string/overview"
            android:textAllCaps="false"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="@color/funOrange"
            android:drawableRight="@drawable/nextarrowsmall"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="nextLetter"
            android:paddingLeft="2dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/next_page"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:iconPadding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textLetterDesc"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:text="@string/letter_description"
        android:textAlignment="center"
        android:textColor="#5C5C5C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_a_letter"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <ImageView
        android:id="@+id/imgLetter"
        android:layout_width="351dp"
        android:layout_height="266dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/slide01" />

</androidx.constraintlayout.widget.ConstraintLayout>